syntax = "proto3";

package performance.autoscaling.v1alpha1;

option csharp_namespace = "Performance.Autoscaling.V1Alpha1";
option go_package = "github.com/performance-grpc-sdk/autoscaling/v1alpha1";
option java_multiple_files = true;
option java_outer_classname = "AutoscalingAgentApiProto";
option java_package = "io.cuemby.performance.autoscaling.v1alpha1";
option objc_class_prefix = "PFX";
option php_namespace = "Performance\\Autoscaling\\V1Alpha1";

import "performance/autoscaling/v1alpha1/autoscaling.proto";


service AutoscalingAgentAPIService{
    rpc AgentCreateAutoscaling(AgentCreateAutoscalingRequest) returns (AgentCreateAutoscalingResponse) {};
    rpc AgentUpdateAutoscaling(AgentUpdateAutoscalingRequest) returns (AgentUpdateAutoscalingResponse) {};
    rpc AgentDeleteAutoscaling(AgentDeleteAutoscalingRequest) returns (AgentDeleteAutoscalingResponse) {};
    rpc AgentGetAutoscaling(AgentGetAutoscalingRequest) returns (AgentGetAutoscalingResponse) {};
    rpc AgentListAutoscaling(AgentListAutoscalingRequest) returns (AgentListAutoscalingResponse) {};
}

message AgentCreateAutoscalingResponse {
    performance.autoscaling.v1alpha1.Autoscaling autoscaling = 1;
    string origin = 2;
}

message AgentCreateAutoscalingRequest {
    performance.autoscaling.v1alpha1.Autoscaling autoscaling = 1;
    string status = 2;
    string origin = 3;
}

message AgentUpdateAutoscalingResponse {
    performance.autoscaling.v1alpha1.Autoscaling autoscaling = 1;
    string origin = 2;
}

message AgentUpdateAutoscalingRequest {
    performance.autoscaling.v1alpha1.Autoscaling autoscaling = 1;
    string status = 2;
    string origin = 3;
}

message AgentDeleteAutoscalingResponse {
    performance.autoscaling.v1alpha1.Metadata metadata = 1;
    string origin = 2;
}

message AgentDeleteAutoscalingRequest {
    performance.autoscaling.v1alpha1.Metadata metadata = 1;
    string status = 2;
}

message AgentGetAutoscalingResponse {
    performance.autoscaling.v1alpha1.Metadata metadata = 1;
    string origin = 2;
}

message AgentGetAutoscalingRequest {
    performance.autoscaling.v1alpha1.Autoscaling autoscaling = 1;
    string status = 2;
    string origin = 3;
}

message AgentListAutoscalingResponse {
    performance.autoscaling.v1alpha1.Metadata metadata = 1;
    string origin = 2;
    repeated performance.autoscaling.v1alpha1.Autoscaling autoscalings = 3;
    string status = 4;
}

message AgentListAutoscalingRequest {
    repeated performance.autoscaling.v1alpha1.Autoscaling autoscalings = 1;
    string origin = 2;
    performance.autoscaling.v1alpha1.Metadata metadata = 3;
    string status = 4;
}